syntax = "proto3";
option java_multiple_files = true;
package com.w2coding.common;

message GrpcResponse {
  string result = 1;
  string message = 2;
}