syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.w2coding.proto.member";
package com.w2coding.common;

import "common.proto";

service MemberService {

  rpc SignUp (SignUpRequest) returns (GrpcResponse);
  rpc SignIn (SignInRequest) returns (GrpcResponse);

}

message SignUpRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  int32 type = 4;
  optional int64 store_id = 5;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

